--- a/space-invaders-retro/assets/css/style.css
+++ b/space-invaders-retro/assets/css/style.css
@@ -1,6 +1,6 @@
  @font-face {
         font-family: "Arcade";
-            src: url("fonts/ARCADE_I.TTF");
+            src: url("../../../fonts/ARCADE_I.TTF");
         }
    
     
